--- a/pulse_healthcare/static/assets/css/main.css
+++ b/pulse_healthcare/static/assets/css/main.css
@@ -1418,6 +1418,8 @@ section,
 
 .team .person img {
   transition: 0.3s all ease;
+  width: 100%;
+  height: 300px;
 }
 
 .team .person .person-contents {
@@ -2431,6 +2433,10 @@ h1 {
   transform: rotateY(-180deg);
   transform-style: preserve-3d;
 }
+  .container .position-relative{
+  background-image: url(../images/hero.jpg);
+  background-size: cover;
+  }
 
 .front .inner p {
   font-size: 2rem;
