--- a/pulse_healthcare/static/css/register.css
+++ b/pulse_healthcare/static/css/register.css
@@ -1,4 +1,7 @@
+/* Your CSS code from the provided HTML file */
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+/* Add the rest of your CSS code here */
+
 * {
     margin: 0;
     padding: 0;
