--- a/pulse_healthcare/templates/services.html
+++ b/pulse_healthcare/templates/services.html
@@ -37,8 +37,8 @@
     
           <a href="{{ url_for('home') }}" class="logo d-flex align-items-center">
             <!-- Uncomment the line below if you also wish to use an image logo -->
-            <img src="{{ url_for('static', filename='assets/img/logo.png') }}" alt="AgriCulture">
-            <!-- <h1 class="sitename">AgriCulture</h1>  -->
+            <img src="{{ url_for('static', filename='assets/img/logo.png') }}" alt="Pulse">
+
           </a>
     
           <nav id="navmenu" class="navmenu">
@@ -46,9 +46,9 @@
               <li><a href="{{ url_for('home') }}">Home</a></li>
               <li><a href="{{ url_for('about') }}">About Us</a></li>
               <li><a href="{{ url_for('services') }}" class="active">Our Services</a></li>
-              <li><a href="{{ url_for('blog') }}">Blog</a></li>
-
               <li><a href="{{ url_for('contact') }}">Contact</a></li>
+              <li><a href="{{ url_for('login') }}">login</a></li>
+              <li><a href="{{ url_for('register') }}">Signup</a></li>
             </ul>
             <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
           </nav>
@@ -93,39 +93,37 @@
             <div class="container">
               <div class="row">
                 <div class="col-lg-6 mb-4 mb-lg-0">
-                  <img src="{{ url_for('static', filename='assets/img/img_sq_1.jpg') }}" alt="Image " class="img-fluid img-overlap" data-aos="zoom-out">
+                  <img src="{{ url_for('static', filename='assets/img/img_sq_1.jpg') }}" alt="Image" class="img-fluid img-overlap" data-aos="zoom-out">
                 </div>
                 <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
-                  <h3 class="content-subtitle text-white opacity-50">Why Choose Us</h3>
+                  <h3 class="content-subtitle text-white opacity-50">Why Choose PULSE</h3>
                   <h2 class="content-title mb-4">
-                    More than <strong>50 year experience</strong> in agriculture
-                    industry
+                    Leading the <strong>innovation</strong> in healthcare technology
                   </h2>
                   <p class="opacity-50">
-                    Reprehenderit, odio laboriosam? Blanditiis quae ullam quasi illum
-                    minima nostrum perspiciatis error consequatur sit nulla.
+                    PULSE merges advanced technology with healthcare to deliver real-time solutions that enhance accessibility to medical resources and improve patient care.
                   </p>
-    
+          
                   <div class="row my-5">
                     <div class="col-lg-12 d-flex align-items-start mb-4">
                       <i class="bi bi-cloud-rain me-4 display-6"></i>
                       <div>
-                        <h4 class="m-0 h5 text-white">Plants needs rain</h4>
-                        <p class="text-white opacity-50">Lorem ipsum dolor sit amet.</p>
+                        <h4 class="m-0 h5 text-white">Real-Time Updates</h4>
+                        <p class="text-white opacity-50">Our platform ensures timely information on pharmacy inventories and medication availability.</p>
                       </div>
                     </div>
                     <div class="col-lg-12 d-flex align-items-start mb-4">
                       <i class="bi bi-heart me-4 display-6"></i>
                       <div>
-                        <h4 class="m-0 h5 text-white">Love organic foods</h4>
-                        <p class="text-white opacity-50">Lorem ipsum dolor sit amet.</p>
+                        <h4 class="m-0 h5 text-white">User-Focused Design</h4>
+                        <p class="text-white opacity-50">We design with the user in mind, making our platform easy to use and accessible for all.</p>
                       </div>
                     </div>
                     <div class="col-lg-12 d-flex align-items-start">
                       <i class="bi bi-shop me-4 display-6"></i>
                       <div>
-                        <h4 class="m-0 h5 text-white">Sell vegies</h4>
-                        <p class="text-white opacity-50">Lorem ipsum dolor sit amet.</p>
+                        <h4 class="m-0 h5 text-white">Extensive Support</h4>
+                        <p class="text-white opacity-50">We provide comprehensive support and resources to users and healthcare providers to enhance the effectiveness of our platform.</p>
                       </div>
                     </div>
                   </div>
@@ -133,25 +131,27 @@
               </div>
             </div>
           </div>
+          
+          
         </section><!-- /About Section -->
     
         <!-- testimonials Section -->
         <section class="testimonials-12 testimonials section" id="testimonials">
           <!-- Section Title -->
           <div class="container section-title" data-aos="fade-up">
-            <h2>testimonials</h2>
-            <p>Necessitatibus eius consequatur</p>
+            <h2>Testimonials</h2>
+            <p>About Our Platform</p>
           </div><!-- End Section Title -->
-    
+        
           <div class="testimonial-wrap">
             <div class="container">
               <div class="row">
                 <div class="col-md-6 mb-4 mb-md-4">
                   <div class="testimonial">
-                    <img src="{{ url_for('static', filename='assets/img//testimonials/testimonials-1.jpg') }}" alt="Testimonial author">
+                    <img src="{{ url_for('static', filename='assets/img/testimonials/testimonials-1.jpg') }}" alt="Testimonial author">
                     <blockquote>
                       <p>
-                        "As someone who frequently needs medication, Pulse has been incredibly useful. The app’s design is intuitive, and the information is always accurate."
+                        "PULSE has transformed the way I manage my medication needs. The app's real-time data and user-friendly interface make finding pharmacies and medications effortless."
                       </p>
                     </blockquote>
                     <p class="client-name">James Smith</p>
@@ -162,9 +162,7 @@
                     <img src="{{ url_for('static', filename='assets/img/testimonials/testimonials-2.jpg') }}" alt="Testimonial author">
                     <blockquote>
                       <p>
-                        “Lorem ipsum dolor sit, amet consectetur adipisicing
-                        elit. Provident deleniti iusto molestias, dolore vel fugiat
-                        ab placeat ea?”
+                        “PULSE is a game-changer for healthcare access. The app’s comprehensive features and accurate information are invaluable for anyone needing reliable medical resources.”
                       </p>
                     </blockquote>
                     <p class="client-name">Kate Smith</p>
@@ -172,10 +170,10 @@
                 </div>
                 <div class="col-md-6 mb-4 mb-md-4">
                   <div class="testimonial">
-                    <img src="{{ url_for('static', filename='assets/img/testimonials/testimonials-3.jpg') }}" alt="Testimonials author">
+                    <img src="{{ url_for('static', filename='assets/img/testimonials/testimonials-3.jpg') }}" alt="Testimonial author">
                     <blockquote>
                       <p>
-                        Sarah T.: "As a healthcare professional, I recommend Pulse to all my patients. It’s an excellent tool for quickly finding pharmacies with the medications they need."”
+                        "As a healthcare provider, I recommend PULSE to my patients for its efficiency in locating pharmacies with specific medications. It's a must-have tool for modern healthcare."
                       </p>
                     </blockquote>
                     <p class="client-name">Claire Anderson</p>
@@ -183,10 +181,10 @@
                 </div>
                 <div class="col-md-6 mb-4 mb-md-4">
                   <div class="testimonial">
-                    <img src="{{ url_for('static', filename='assets/img/testimonials/testimonials-4.jpg') }}" alt="Testimonials author">
+                    <img src="{{ url_for('static', filename='assets/img/testimonials/testimonials-4.jpg') }}" alt="Testimonial author">
                     <blockquote>
                       <p>
-                        "Pulse makes it so convenient to locate nearby pharmacies. I appreciate the accurate information and user-friendly interface."
+                        "PULSE simplifies the search for nearby pharmacies and provides accurate, up-to-date information. The user experience is excellent, making it my go-to app for medication needs."
                       </p>
                     </blockquote>
                     <p class="client-name">Dan Smith</p>
@@ -196,6 +194,7 @@
             </div>
           </div>
         </section><!-- /testimonials Section -->
+        
     
         <!-- Call To Action Section -->
         <section id="call-to-action" class="call-to-action section light-background">
@@ -230,19 +229,19 @@
       </main>
     
       <footer id="footer" class="footer dark-background">
-    
+      
         <div class="footer-top">
           <div class="container">
             <div class="row gy-4">
               <div class="col-lg-4 col-md-6 footer-about">
                 <a href="{{ url_for('home') }}" class="logo d-flex align-items-center">
-                  <span class="sitename">AgriCulture</span>
+                  <span class="sitename">PULSE</span>
                 </a>
                 <div class="footer-contact pt-3">
-                  <p>A108 Adam Street</p>
-                  <p>New York, NY 535022</p>
-                  <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-                  <p><strong>Email:</strong> <span>info@example.com</span></p>
+                  <p>Nyamirambo Road</p>
+                  <p>Kigali, Rwanda</p>
+                  <p class="mt-3"><strong>Phone:</strong> <span>+250 785 123 456</span></p>
+                  <p><strong>Email:</strong> <span>Alu@example.com</span></p>
                 </div>
               </div>
     
@@ -269,26 +268,27 @@
               </div>
     
               <div class="col-lg-2 col-md-3 footer-links">
-                <h4>Hic solutasetp</h4>
+                <h4>Support</h4>
                 <ul>
-                  <li><a href="#">Molestiae accusamus iure</a></li>
-                  <li><a href="#">Excepturi dignissimos</a></li>
-                  <li><a href="#">Suscipit distinctio</a></li>
-                  <li><a href="#">Dilecta</a></li>
-                  <li><a href="#">Sit quas consectetur</a></li>
+                  <li><a href="#">Help Center</a></li>
+                  <li><a href="#">FAQ</a></li>
+                  <li><a href="#">Contact Us</a></li>
+                  <li><a href="#">Customer Service</a></li>
+                  <li><a href="#">Report Issues</a></li>
                 </ul>
               </div>
-    
+              
               <div class="col-lg-2 col-md-3 footer-links">
-                <h4>Nobis illum</h4>
+                <h4>Our Partners</h4>
                 <ul>
-                  <li><a href="#">Ipsam</a></li>
-                  <li><a href="#">Laudantium dolorum</a></li>
-                  <li><a href="#">Dinera</a></li>
-                  <li><a href="#">Trodelas</a></li>
-                  <li><a href="#">Flexo</a></li>
+                  <li><a href="#">Our Network</a></li>
+                  <li><a href="#">Collaborations</a></li>
+                  <li><a href="#">Community Support</a></li>
+                  <li><a href="#">Investor Relations</a></li>
+                  <li><a href="#">Feedback</a></li>
                 </ul>
               </div>
+              
     
             </div>
           </div>
@@ -299,7 +299,7 @@
     
             <div class="d-flex flex-column align-items-center align-items-lg-start">
               <div>
-                © Copyright <strong><span>MyWebsite</span></strong>. All Rights Reserved
+                © Copyright <strong><span>Pulse</span></strong>. All Rights Reserved
               </div>
               <div class="credits">
                 <!-- All the links in the footer should remain intact. -->
