--- a/pulse_healthcare/static/assets/css/main.css
+++ b/pulse_healthcare/static/assets/css/main.css
@@ -1420,6 +1420,7 @@ section,
   transition: 0.3s all ease;
   width: 100%;
   height: 300px;
+  object-fit: cover;
 }
 
 .team .person .person-contents {
