--- a/pulse_healthcare/templates/pharmacies.html
+++ b/pulse_healthcare/templates/pharmacies.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Pharmacies - Pulse Bootstrap Template</title>
+    <title>Pulse </title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -166,7 +166,6 @@
               <!-- All the links in the footer should remain intact. -->
               <!-- You can delete the links only if you purchased the pro version. -->
               <!-- Licensing information: https://bootstrapmade.com/license/ -->
-              <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/herobiz-bootstrap-business-template/ -->
               Designed by <a href="{{ url_for('home') }}">PULSE</a>
             </div>
           </div>
