--- a/pulse_healthcare/static/css/login.css
+++ b/pulse_healthcare/static/css/login.css
@@ -157,3 +157,14 @@ form .btn input[type="submit"] {
     transform: translate(-50%, -50%);
     z-index: 10;
 }
+.alert {
+    padding: 15px;
+    margin-top: 10px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    color: #fff;
+    background-color: #d9534f;
+    border-color: #d43f3a;
+    text-align: center;
+}
+
